<resources>
    <string name="app_name">MyLed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_b">Home</string>
    <string name="effects_b">Effects</string>
    <string name="colorMusic_b">Color\nmusic</string>
    <string name="settings_b">Settings</string>

    <string name="brightness">Brightness</string>

    <string name="effects">Effects</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="rainbowLoop">Rainbow loop</string>
    <string name="flipflop">Flip Flop</string>
    <string name="fade">Fade</string>
    <string name="rainbow">Rainbow</string>
    <string name="rainbowFade">Rainbow fade</string>
    <string name="randomColorFade">Random color\nfade</string>
    <string name="police">Police</string>
    <string name="speed">Speed</string>

    <string name="colorMusic">Color music</string>
    <string name="sectors">Sectors</string>
    <string name="running_leds">Running\nleds</string>
    <string name="flashing">Flashing</string>
    <string name="sensetive">Sensetive</string>
    <string name="bass">Bass</string>
    <string name="middle">Middle</string>
    <string name="treble">Treble</string>


    <string name="settings">Settings</string>
    <string name="numleds">Number of leds</string>
    <string name="submit">Submit</string>
    <string name="router">Router</string>
    <string name="controller">Controller</string>
    <string name="ssid">SSID</string>
    <string name="pass">Password</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="question">\?</string>

    <string name="instruction">v1.00</string>
</resources>