<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".Fragment_Settings">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="-24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_theme">

        <ImageButton
            android:id="@+id/iB_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="iB_theme"
            android:scaleType="fitXY"
            android:src="@drawable/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tV_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilosopher"
            android:text="@string/dark"
            android:textColor="@color/grey"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iB_theme" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="-16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passAP_field">

        <ImageButton
            android:id="@+id/iB_submitController"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="iB_submitController"
            android:scaleType="fitCenter"
            android:src="@drawable/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tV_submitController"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilosopher"
            android:text="@string/submit"
            android:textColor="@color/grey"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="-16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_field">

        <ImageButton
            android:id="@+id/iB_submitRouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="iB_submitRouter"
            android:scaleType="fitCenter"
            android:src="@drawable/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tV_submitRouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilosopher"
            android:text="@string/submit"
            android:textColor="@color/grey"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="-16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numleds_field">

        <ImageButton
            android:id="@+id/iB_submitNumleds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="iB_submitNumleds"
            android:scaleType="fitCenter"
            android:src="@drawable/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tV_submitNumleds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilosopher"
            android:text="@string/submit"
            android:textColor="@color/grey"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tV_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/settings"
        android:textColor="@color/grey"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tV_numled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/numleds"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_settings" />

    <TextView
        android:id="@+id/tV_router"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pilosopher"
        android:text="@string/router"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <EditText
        android:id="@+id/ssid_field"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/net_field"
        android:ems="10"
        android:fontFamily="@font/pilosopher"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_router" />

    <EditText
        android:id="@+id/pass_field"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/net_field"
        android:ems="10"
        android:fontFamily="@font/pilosopher"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssid_field" />

    <EditText
        android:id="@+id/numleds_field"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/numled_field"
        android:ems="10"
        android:fontFamily="@font/pilosopher"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_numled" />

    <TextView
        android:id="@+id/tV_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/ssid"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/ssid_field"
        app:layout_constraintTop_toBottomOf="@+id/tV_router" />

    <TextView
        android:id="@+id/tV_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/pass"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/pass_field"
        app:layout_constraintTop_toBottomOf="@+id/tV_router" />

    <TextView
        android:id="@+id/tV_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pilosopher"
        android:text="@string/controller"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <EditText
        android:id="@+id/ssidAP_field"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/net_field"
        android:ems="10"
        android:fontFamily="@font/pilosopher"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_controller" />

    <EditText
        android:id="@+id/passAP_field"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/net_field"
        android:ems="10"
        android:fontFamily="@font/pilosopher"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssidAP_field" />

    <TextView
        android:id="@+id/tV_ssidAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/ssid"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/ssidAP_field"
        app:layout_constraintTop_toBottomOf="@+id/tV_controller" />

    <TextView
        android:id="@+id/tV_passAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/pass"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/passAP_field"
        app:layout_constraintTop_toBottomOf="@+id/tV_controller" />

    <TextView
        android:id="@+id/tV_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/pilosopher"
        android:text="@string/theme"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_settings" />

    <ImageButton
        android:id="@+id/iB_instruction"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="iB_instruction"
        android:scaleType="fitCenter"
        android:src="@drawable/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passAP_field" />

    <TextView
        android:id="@+id/tV_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pilosopher"
        android:text="@string/question"
        android:textColor="@color/grey"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iB_instruction"
        app:layout_constraintEnd_toEndOf="@+id/iB_instruction"
        app:layout_constraintStart_toStartOf="@+id/iB_instruction"
        app:layout_constraintTop_toTopOf="@+id/iB_instruction" />

</androidx.constraintlayout.widget.ConstraintLayout>